<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main activity -->
    <string name="app_name">BLE SensorTag</string>
    <string name="button_scan">Scan</string>
    <string name="title_device_list">Device List</string>
    <string name="device">Device</string>
    <string name="header">Available BLE Devices</string>
    <string name="disconnected">Device is not connected</string>
    <string name="control">Done</string>
    <string name="bt_not_supported">Bluetooth is not supported</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="bt_on">Bluetooth was turned  on</string>
    <string name="bt_not_on">Bluetooth was not turned on</string>
    <string name="app_closing">Exiting BLE SensorTag app</string>

    <string-array name="device_filter">
        <item>SensorTag</item>
    </string-array>

    <string name="nodevice">There are no SensorTags advertising within range. Please push the side button on the SensorTag to start advertising.</string>
    <string name="scan_advice">The Android device is not scanning. Please tap \'Scan\' to scan for SensorTags.</string>

    <!-- Options menu -->
    <string name="prefs">Preferences</string>
    <string name="fwupdate">Firmware update</string>
    <string name="bt">Bluetooth Adapter</string>
    <string name="sthome">SensorTag Home</string>
    <string name="tie2e">TI E2E Community</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <!-- Device activity -->
    <string name="dev_addr">Device address</string>
    <string name="image">Image</string>

    <!-- Sensor names -->
    <string name="keys">Keys</string>
    <string name="acc">Accelerometer</string>
    <string name="mag">Magnetometer</string>
    <string name="gyro">Gyroscope</string>
    <string name="hum">Humidity</string>
    <string name="bar">Barometer</string>
    <string name="tAmb">Ambience Temperature</string>
    <string name="tObj">Object Temperature</string>

    <!-- Sensor misc. -->
    <string name="xyz3">x:\ny:\nz:\n</string>
    <string name="empty3">*\n*\n*\n</string>
    <string name="unitDegSec3">deg/s\ndeg/s\ndeg/s\n</string>
    <string name="unitG3">g\ng\ng\n</string>
    <string name="unitT3">uT\nuT\nuT\n</string>
    <string name="empty1">*\n</string>
    <string name="unitDeg">deg/C\n</string>
    <string name="unitRH">%rH\n</string>
    <string name="unitPA_Meter">nPA\nmeter</string>

    <!-- FWUpdate activity -->
    <string name="title_oad">Firmware update (OAD)</string>
    <string name="start_prog">Start programming</string>
    <string name="cancel">Cancel</string>
    <string name="prog_ogoing">NB! Not permitted to close this view during OAD transfer</string>
    <string name="load_image_a">Image A</string>
    <string name="load_image_b">Image B</string>
    <string name="load_image_c">Custom</string>
    <string name="no_image">Not an OAD image</string>
    <string name="no_image_sel">No image selected</string>
    <string name="new_image">New image:</string>
    <string name="cur_image">Current image:</string>
    <string name="idle">idle</string>
    <string name="btn_txt_confirm">Confirm</string>

    <!-- Buttons -->
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="repeat_exercise">Repeat Exercise</string>
    <string name="new_exercise">Choose New Exercise</string>

    <!-- Text -->
    <string name="range_of_rotation_avg">0 degrees</string>
    <string name="range_of_rotation_max">0 degrees</string>
    <string name="num_reps">0 reps</string>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_choose_exercise">ChooseExercise</string>

    <string name="step1">Step 1: Attach FlexTech to wrist</string>
    <string name="step2">Step 2: Get into start position</string>
    <string name="startposition">Start Position: </string>
    <string name="endposition">End Position: </string>
    <string name="congrats">Congratulations, you finished an exercise.</string>
    <string name="okay_label">You did OKAY</string>
    <string name="good_label">Good Job</string>
    <string name="bad_label">You NEED IMPROVEMENT</string>
    <string name="okay_message">Almost there! Just a short way to your goal.</string>
    <string name="good_message">Great, you are at or close to your goal.</string>
    <string name="bad_message">Try to improve your angle next time!</string>
    <string name="average_message">Your average angle of motion was: </string>
    
   
    
    <!--  Image Descriptions -->
    <string name="demo_image_desc">How to put on device</string>
    
    <!--  Header -->
    <string name="flextech">Flex-Tech</string>

</resources>