<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:id="@id/services_browser_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:stretchColumns="*" android:shrinkColumns="*">
        <TableRow style="@style/ServiceHeaderRow">
            <TextView android:text="@string/keys" style="@style/ServiceHeaderItem" />
        </TableRow>
        <TableRow android:id="@id/keyPanel" style="@style/ServiceRow">
            <TextView android:drawableLeft="@drawable/sensortag_simplekeys" />
            <ImageView android:id="@id/buttons" android:layout_height="wrap_content" android:src="@drawable/buttonsoffoff" android:layout_span="2" android:contentDescription="@string/image" />
            <TextView android:layout_span="1" />
        </TableRow>
        <TableRow style="@style/ServiceHeaderRow">
            <TextView android:text="@string/acc" style="@style/ServiceHeaderItem" />
        </TableRow>
        <TableRow android:id="@id/accPanel" style="@style/ServiceRow">
            <TextView android:drawableLeft="@drawable/accelerometer" />
            <TextView android:text="@string/xyz3" style="@style/ServiceItem" />
            <TextView android:id="@id/accelerometerTxt" android:text="@string/empty3" style="@style/ServiceItemValue" />
            <TextView android:text="@string/unitG3" style="@style/ServiceItem" />
        </TableRow>
        <TableRow style="@style/ServiceHeaderRow">
            <TextView android:text="@string/mag" style="@style/ServiceHeaderItem" />
        </TableRow>
        <TableRow android:id="@id/magPanel" style="@style/ServiceRow">
            <TextView android:drawableLeft="@drawable/sensortag_magnetometer" />
            <TextView android:text="@string/xyz3" style="@style/ServiceItem" />
            <TextView android:id="@id/magnetometerTxt" android:text="@string/empty3" style="@style/ServiceItemValue" />
            <TextView android:text="@string/unitT3" style="@style/ServiceItem" />
        </TableRow>
        <TableRow style="@style/ServiceHeaderRow">
            <TextView android:text="@string/gyro" style="@style/ServiceHeaderItem" />
        </TableRow>
        <TableRow android:id="@id/gyrPanel" style="@style/ServiceRow">
            <TextView android:drawableLeft="@drawable/gyroscope" />
            <TextView android:text="@string/xyz3" style="@style/ServiceItem" />
            <TextView android:id="@id/gyroscopeTxt" android:text="@string/empty3" style="@style/ServiceItemValue" />
            <TextView android:text="@string/unitDegSec3" style="@style/ServiceItem" />
        </TableRow>
        <TableRow style="@style/ServiceHeaderRow">
            <TextView android:text="@string/tObj" style="@style/ServiceHeaderItem" />
        </TableRow>
        <TableRow android:id="@id/objPanel" style="@style/ServiceRow">
            <TextView android:drawableLeft="@drawable/irtemperature" />
            <TextView style="@style/ServiceItem" />
            <TextView android:id="@id/objTemperatureText" android:text="@string/empty1" style="@style/ServiceItemValue" />
            <TextView android:text="@string/unitDeg" style="@style/ServiceItem" />
        </TableRow>
        <TableRow style="@style/ServiceHeaderRow">
            <TextView android:text="@string/tAmb" style="@style/ServiceHeaderItem" />
        </TableRow>
        <TableRow android:id="@id/ambPanel" style="@style/ServiceRow">
            <TextView android:drawableLeft="@drawable/temperature" />
            <TextView android:text="" style="@style/ServiceItem" />
            <TextView android:id="@id/ambientTemperatureTxt" android:text="@string/empty1" style="@style/ServiceItemValue" />
            <TextView android:text="@string/unitDeg" style="@style/ServiceItem" />
        </TableRow>
        <TableRow style="@style/ServiceHeaderRow">
            <TextView android:text="@string/hum" style="@style/ServiceHeaderItem" />
        </TableRow>
        <TableRow android:id="@id/humPanel" style="@style/ServiceRow">
            <TextView android:drawableLeft="@drawable/humidity" />
            <TextView android:text="" style="@style/ServiceItem" />
            <TextView android:id="@id/humidityTxt" android:text="@string/empty1" style="@style/ServiceItemValue" />
            <TextView android:text="@string/unitRH" style="@style/ServiceItem" />
        </TableRow>
        <TableRow style="@style/ServiceHeaderRow">
            <TextView android:text="@string/bar" style="@style/ServiceHeaderItem" />
        </TableRow>
        <TableRow android:id="@id/barPanel" style="@style/ServiceRow">
            <TextView android:drawableLeft="@drawable/barometer" />
            <TextView android:text="" style="@style/ServiceItem" />
            <TextView android:id="@id/barometerTxt" android:text="@string/empty1" style="@style/ServiceItemValue" />
            <TextView android:text="@string/unitPA_Meter" style="@style/ServiceItem" />
        </TableRow>
        <TableRow android:id="@id/statusPanel" style="@style/ServiceRow">
            <TextView android:textSize="12.0sp" android:gravity="center" android:id="@id/status" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_span="4" style="@style/statusStyle" />
        </TableRow>
    </TableLayout>
</ScrollView>