<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="left" android:orientation="horizontal" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_gravity="left|center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/cur_image" android:layout_weight="1.0" style="@style/nameStyle" />
        <TextView android:id="@id/tw_target" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/no_image" android:layout_weight="1.5" style="@style/dataStyle1" />
    </LinearLayout>
    <LinearLayout android:gravity="left" android:orientation="horizontal" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_gravity="left|center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/new_image" android:layout_weight="1.0" style="@style/nameStyle" />
        <TextView android:gravity="left" android:id="@id/tw_file" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/no_image_sel" android:layout_weight="1.5" android:textAlignment="1" style="@style/dataStyle1" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:gravity="center" android:layout_gravity="center" android:id="@id/btn_load_a" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/load_image_a" android:onClick="onLoad" style="?android:attr/buttonStyle" />
        <Button android:layout_gravity="center" android:id="@id/btn_load_b" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/load_image_b" android:onClick="onLoad" style="?android:attr/buttonStyle" />
        <Button android:layout_gravity="center" android:id="@id/btn_load_c" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/load_image_c" android:onClick="onLoadCustom" style="?android:attr/buttonStyle" />
    </LinearLayout>
    <TextView android:textSize="14.0sp" android:gravity="center_horizontal" android:layout_gravity="center" android:id="@id/tw_info" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/idle" android:layout_weight="0.0" style="@style/dataStyle" />
    <ProgressBar android:id="@id/pb_progress" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:maxHeight="15.0dip" android:max="100" android:progress="0" android:indeterminate="false" android:minHeight="15.0dip" style="@android:style/Widget.ProgressBar.Horizontal" />
    <TextView android:layout_gravity="bottom" android:id="@id/tw_log" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:lines="10" android:layout_weight="1.0" style="@style/logStyle" />
    <Button android:layout_gravity="bottom" android:id="@id/btn_start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/start_prog" android:layout_weight="0.0" android:onClick="onStart" />
</LinearLayout>