<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FileActivity" >

   	<!-- Instructions to Set up Device  -->
    <TextView
        android:id="@+id/step1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:text="@string/step1" />

    <ImageView
        android:id="@+id/demo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/demo_image_desc"
        android:src="@drawable/elbow_instructions_1" />

    <TextView
        android:id="@+id/step2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/step2" />
    
    <TextView
        android:id="@+id/tw_directory"
        style="@style/dirStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <!-- Exercise Instructions -->
    <TextView
        android:id="@+id/start_position"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/startposition" 
        android:visibility="gone"/>
    
    <ImageView
        android:id="@+id/start_image"
        android:layout_width="232dp"
        android:layout_height="144dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/elbow_instructions_1" 
        android:contentDescription="@string/demo_image_desc"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/end_position"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/endposition" 
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/end_image"
        android:layout_width="172dp"
        android:layout_height="163dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/elbow_instructions_2" 
        android:contentDescription="@string/demo_image_desc"
        android:visibility="gone"/>
	
    <!-- Button to Start/Stop Recording -->
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="recordRangeOfMotion"
        android:text="@string/start_recording"
        android:textSize="20sp" />

    <!-- Degrees -->
    <TextView
        android:id="@+id/avgDegrees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/range_of_rotation_avg"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />
    
	<TextView
	    android:id="@+id/maxDegrees"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/range_of_rotation_max"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:visibility="gone" />
        
	<TextView
	    android:id="@+id/numReps"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/num_reps"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:visibility="gone" />

</LinearLayout>