<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/step1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="10sp"
        android:text="@string/step1" />

    <ImageView
        android:id="@+id/demo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/demo_image_desc"
        android:src="@drawable/elbow_instructions_1" />

    <TextView
        android:id="@+id/step2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/step2" />

    <Button
        android:id="@+id/startRecordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/start_recording" />

</LinearLayout>