<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/start_position"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/startposition" />
    
    <ImageView
        android:id="@+id/start_image"
        android:layout_width="423dp"
        android:layout_height="134dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/Elbow_Instructions_1" />

    <TextView
        android:id="@+id/end_position"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/endposition" />

    <ImageView
        android:id="@+id/end_image"
        android:layout_width="198dp"
        android:layout_height="187dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/Elbow_Instructions_2" />
    
    <Button 
        android:id="@+id/done_exercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layou_gravity="center"
        android:text="@string/stop_recording"/>

</LinearLayout>