<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="bottom" android:orientation="vertical" android:padding="0.0dip" android:clickable="false" android:longClickable="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListView android:id="@id/device_list" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_margin="10.0dip" android:choiceMode="singleChoice" android:layout_weight="2.0" style="@style/devlistStyle" />
    <ProgressBar android:gravity="center_horizontal" android:id="@id/pb_busy" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" style="?android:attr/progressBarStyle" />
    <TextView android:textSize="20.0sp" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/no_device" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="50.0dip" android:text="@string/nodevice" />
    <ImageView android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="50.0dip" android:src="@drawable/ti_stk_2c_pos_rgb_png" android:contentDescription="@string/image" />
    <TextView android:textSize="12.0sp" android:gravity="center" android:id="@id/status" android:layout_width="fill_parent" android:layout_height="30.0dip" />
    <Button android:gravity="center" android:linksClickable="false" android:id="@id/btn_scan" android:padding="10.0dip" android:fadingEdge="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/button_scan" android:onClick="onBtnScan" />
</LinearLayout>